--- a/aws.yml
+++ b/aws.yml
@@ -25,7 +25,7 @@
           - proto: tcp
             from_port: 22
             to_port: 22
-            cidr_ip: "{{ allowed_ips }}"
+            cidr_ip: 0.0.0.0/0
           - proto: tcp
             from_port: 25565
             to_port: 25565
