fixing appserver install

--- a/roles/appserver/files/testapp.conf
+++ b/roles/appserver/files/testapp.conf
@@ -5,4 +5,4 @@ user=nobody
 autostart=true
 autorestart=true
 redirect_stderr=true
-environment=databasepassword="{{ lookup('password'. 'credentials/dbpassword.txt') }}"
+environment=databasepassword="{{ lookup('password', 'credentials/dbpassword.txt') }}"
