--- a/ansible.cfg
+++ b/ansible.cfg
@@ -59,8 +59,8 @@ inventory      = hosts
 #roles_path    = /etc/ansible/roles
 
 # uncomment this to disable SSH key host checking
-host_key_checking = False
-private_key_file = /home/ansible/ansible/aws03.pem
+# host_key_checking = False
+# private_key_file = /home/ansible/aws03.pem
 
 # change the default callback, you can only have one 'stdout' type  enabled at a time.
 #stdout_callback = skippy
